# dotfiles

./: .aider.conf.yml  .bashrc  .cfgcaddy.yml  .ctags  .customlinks  .default-npm-packages  .folderlinks  .gitconfig  .gitignore  .gitmodules  .linkerignore  .p10k.zsh  .tmux.conf  .tool-versions  .vimrc  .vimrc.bundles.local  .vimrc.dein  .vimrc.local  .vimrc.plug  .vintrc.yaml  .zplug_packages.zsh  .zprofile  .zshenv  .zshrc  BUILD.bazel  Brewfile  Brewfile.linux  Brewfile.test  Makefile  README.md  TODO.md  WORKSPACE  ansible.cfg  apps.yml  bootstrap-dotfiles.ps1  bootstrap-dotfiles.sh  bootstrap-notes.sh  bootstrap.yaml  cdc_proxies.sh  clean-x4-extensions.sh  (+29 more)
.cargo/: config.toml
.config/: flake8  (+1 more)
stapler-scripts/: BUILD.bazel  Cargo.toml  Dockerfile  bash_util_scripts.sh  bootstrap-dotfiles.sh  btrfs-balance.yaml  check_commit_email  clojure-lsp-installer.sh  clojure-lsp-wrapper.sh  disk-cleanup  fbg-aws-setup.sh  git-ssh-fallback  git-ssh-fallback.bats  git-ssh-fallback.integration.bats  git_shared.sh  har2img.py  jvm-optimizer.py  kotlin-lsp-installer.sh  kotlin-lsp-wrapper.sh  memory-optimizer.py  memory-optimizer.yaml  migrate-to-pnpm.sh  mkpdf  putty-copy-id.batch  pyproject.toml  requirements.txt  reset_deinvim.sh  run-memory-optimizer.sh  run_vaping.sh  session-compare  set_git_emails  set_git_ssh  setup-claude-code-ripgrep.sh  setup-dns-node.yaml  setup-github-ssh.sh  setup-swap.sh  stapler-install-update  sync-claude-to-opencode.py  test_har2img.py  update_node_version.py  (+2 more)
stapler-scripts/PowerShell/: Microsoft.PowerShell_profile.ps1
stapler-scripts/PowerShell/Modules/InstallDeinVim/: InstallDeinVim.psm1
stapler-scripts/PowerShell/Scripts/: ken_script_1.ps1  ken_script_2.ps1
stapler-scripts/ark-mod-manager/: .gitignore  diff_utils.py  main.py  manage_mods.py  mod_configs.json  mod_mapping.json  pyproject.toml  test_manage_mods.py  tuning_presets.json
stapler-scripts/claude-proxy/: Makefile  OPTIMIZATION_PHASE1_COMPLETE.md  PARALLELIZATION_PLAN.md  RAY_VS_ASYNC_ANALYSIS.md  README.md  auth.py  bench.py  claude-proxy.sh  com.claude-proxy.plist  compactor.py  config.py  error_tracker.py  fallback.py  install.sh  main.py  metrics.py  profile.sh  pyproject.toml  requirements.txt  scan_litellm_vuln.sh  test_compactor.py  test_error_tracker.py  test_gemini_proxy.py  test_providers.py
stapler-scripts/claude-proxy-rs/: Cargo.toml  Makefile  com.claude-proxy-rs-canary.plist  com.claude-proxy-rs.plist
stapler-scripts/claude-proxy-rs/src/: auth.rs  config.rs  dashboard.rs  fallback.rs  main.rs  mcp_gateway.rs
stapler-scripts/claude-proxy-rs/src/compression/: code_compressor.rs  engine.rs  mod.rs  rewind.rs  smart_crusher.rs  text_compressor.rs
stapler-scripts/claude-proxy-rs/src/learn/: mod.rs  patterns.rs  transcript.rs
stapler-scripts/claude-proxy-rs/src/memory/: dedup.rs  mod.rs  store.rs
stapler-scripts/claude-proxy-rs/src/metrics/: counters.rs  error_tracker.rs  histogram.rs  mod.rs
stapler-scripts/claude-proxy-rs/src/providers/: anthropic.rs  bedrock.rs  mod.rs
stapler-scripts/claude-proxy-rs/src/system_prompt/: cache_aligner.rs  mod.rs  verbosity.rs
stapler-scripts/claude-proxy-rs/tests/: handshake.rs
stapler-scripts/claude-proxy/.claude/: CLAUDE.md  settings.local.json
stapler-scripts/claude-proxy/config/: anthropic_models.json  bedrock_models.json
stapler-scripts/claude-proxy/docs/: bedrock-tool-result-fix.md
stapler-scripts/claude-proxy/docs/tasks/: error-tracking-ui-integration.md
stapler-scripts/claude-proxy/providers/: __init__.py  anthropic.py  bedrock.py
stapler-scripts/claude-proxy/scripts/: README.md  fetch_anthropic_models.py  validate_bedrock_models.py  validate_fingerprints.py
stapler-scripts/claude-proxy/tests/: test_bedrock_models.py
stapler-scripts/claude-proxy/tests/integration/: test_bedrock_api_spec.py
stapler-scripts/display-switch/: display_switch.py  main.py  pyproject.toml  test_display_switch.py  test_display_switch_security.py
stapler-scripts/install-scripts/: dein-install.sh  dropboxannex-install.sh  osx-ansible-install.sh  powerline-font-install.sh  pyenv-install.sh  wemux-install.sh
stapler-scripts/intellij-localhistory-kt/: .gitignore  ORPHAN_DETECTOR.md  build.gradle.kts  intellij-localhistory  scan-orphans-command.kt  settings.gradle.kts
stapler-scripts/intellij-localhistory-kt/docs/tasks/: find-deleted-content.md  intellij-api-facade.md  persistentfs-content-extraction.md
stapler-scripts/litellm-proxy/: .env.template  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  claude-proxy.sh  com.litellm.proxy.plist  config.yaml  config.yaml.backup  configure-claude-code.sh  custom_auth.py  docker-compose.yml  install-service.sh  install-sso-refresh.sh  litellm-proxy.service  oauth_passthrough.py  prometheus.yml  test-proxy.sh  update-models.sh
stapler-scripts/litellm-proxy/docs/tasks/: claude-bedrock-fallback.md
stapler-scripts/litellm-proxy/grafana/dashboards/: litellm-overview.json
stapler-scripts/llm-sync/: AGENTS.md  main.py  pyproject.toml
stapler-scripts/llm-sync/llm_sync/: cli.py  core.py
stapler-scripts/llm-sync/llm_sync/sources/: claude.py
stapler-scripts/llm-sync/src/: cli.py  core.py  mappings.py  state.py
stapler-scripts/roles/: CLAUDE.md
stapler-scripts/roles/bootstrap/: README.md
stapler-scripts/run-vaping/: Dockerfile
stapler-scripts/slack-emoji-export/: extract_slack_emoji.py  main.py  pyproject.toml  test_extract_slack_emoji.py
stapler-scripts/slack-synthesis/: com.tstapler.slack-synthesis.plist  install.sh  run.sh
stapler-scripts/steam-clean/: Cargo.toml
stapler-scripts/steam-clean/src/: main.rs
stapler-scripts/vaping-at-home/: Dockerfile  Makefile  README.md  config.yaml  config.yaml.template  docker-compose.yml  get_gateway.py  hosts.yaml  install-docker-compose.sh  loki-config.yaml  prometheus.yml  promtail-config.yaml  pyproject.toml  run_vaping.sh
stapler-scripts/vaping-at-home/.claude/: settings.local.json
(+1345 files in other folders)
