[package]
name = "claude-proxy-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-proxy-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "timeout"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
eventsource-stream = "0.2"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures-util = "0.3"
aws-sdk-bedrockruntime = "1.135"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
# Pin aws-smithy-http-client to the version pulled transitively by aws-sdk-bedrockruntime 1.135
# Wildcard (*) is not allowed in published crates and trips cargo-deny -- pin explicitly
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
moka = { version = "0.12", features = ["future"] }
tokio-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rolling-file = "0.2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
# nix 0.29: isatty(fd) is in the "fs" feature; isatty(fd) for terminal detection requires "fs"
nix = { version = "0.29", features = ["fs", "term"] }
# simhash: use the "simhash" crate by Michael Sproul (not simsearch/rsim)
simhash = "0.3"
# gaoya does not have a 0.2 release on crates.io; use lshdedup-core which is purpose-built for dedup
lshdedup-core = "0.1"
# tiktoken-rs is at 0.5.x on crates.io -- not 0.12
tiktoken-rs = "0.5"
regex = "1"
once_cell = "1"
sha2 = "0.10"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
bytes = "1"

# Note: release and dev profiles are defined in the workspace root Cargo.toml
# (stapler-scripts/Cargo.toml) — profiles in non-root workspace packages are ignored.

[dev-dependencies]
tempfile = "3"

[workspace]

# Opt out of the parent stapler-scripts workspace so this package can be
# built independently.  Remove this when claude-proxy-rs is added to the
# workspace members list.
