[package]
name = "steam-clean"
version = "0.1.0"
edition = "2021"
description = "Rank and remove Steam games by size × idle time"

[[bin]]
name = "steam-clean"
path = "src/main.rs"

[dependencies]
anyhow    = "1"
clap      = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs      = "5"
ratatui   = "0.29"
