[project]
name = "run-vaping"
version = "0.1.0"
description = "Containerized setup for running Vaping network monitoring tool"
requires-python = ">=3.13"
dependencies = [
    "vaping",
    "vodka",
    "graphsrv",
    "setuptools",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
