[project]
name = "run-vaping"
version = "0.1.0"
description = "Containerized setup for running Vaping network monitoring tool"
requires-python = ">=3.13"
dependencies = [
    "vaping @ git+https://github.com/tstapler/vaping.git@icmputil",
    "prometheus-client>=0.17.1",
    "setuptools",
    "icmplib>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
